# SO_Tarea_1_Client

./: .dockerignore  CMakeLists.txt  Dockerfile  Readme.md  a.out  docker-compose.yml
image/: encoded.txt
src/: main.c
src/services/: add_service.c  add_service.h  encode_b64.c  encode_b64.h
